Text corrections and additions

--- a/article/paper.bib
+++ b/article/paper.bib
@@ -648,3 +648,20 @@
   month = {oct},
   year = {2019},
 }
+
+% CHEN, Tianqi; GUESTRIN, Carlos. XGBoost: A scalable tree boosting system. In: Proceedings of the 22nd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining. 2016. p. 785-794.
+@inproceedings{chen67:2016,
+  title={Xgboost: A scalable tree boosting system},
+  author={Chen, Tianqi and Guestrin, Carlos},
+  booktitle={Proceedings of the 22nd acm sigkdd international conference on knowledge discovery and data mining},
+  pages={785--794},
+  year={2016}
+}
+
+% INTRODUCTION to Boosted Trees. XGBoost Documentation. Disponível em: https://xgboost.readthedocs.io/en/stable/tutorials/model.html. Acesso em: 15 jun. 2024.
+@manual{xgboost68:2024,
+  title        = {INTRODUCTION to Boosted Trees},
+  author       = {{XGBoost Documentation}},
+  year         = 2024,
+  note         = {Available at: \url{https://xgboost.readthedocs.io/en/stable/tutorials/model.html}. Accessed on: June 15, 2024},
+}
