--- a/article/paper.bib
+++ b/article/paper.bib
@@ -485,13 +485,15 @@
   urldate = {2020-11-30},
 }
 
-% AMARAL, Fernando. Aprenda mineração de dados: teoria e prática. São Paulo: Alta Books, 2016. 
-@book{amaral60:2016,
-  author = {{Amaral}, Fernando},
-  title = {Aprenda minera\c{c}{\=a}o de dados: teoria e pr{\'a}tica},
-  year = {2016},
-  publisher = {Alta Books},
-  address = {S{\=a}o Paulo},
+% Mahesh, Batta. "Machine learning algorithms-a review." International Journal of Science and Research (IJSR).[Internet] 9.1 (2020): 381-386.
+@article{mahesh60:2020,
+  title={Machine learning algorithms-a review},
+  author={Mahesh, Batta},
+  journal={International Journal of Science and Research (IJSR).[Internet]},
+  volume={9},
+  number={1},
+  pages={381--386},
+  year={2020}
 }
 
 % SHALEV-SHWARTZ, Shai; BEN-DAVID, Shai. Understanding machine learning: from theory to algorithms. Cambridge: Cambridge University Press, 2014. 
@@ -664,4 +666,16 @@
   author       = {{XGBoost Documentation}},
   year         = 2024,
   note         = {Available at: \url{https://xgboost.readthedocs.io/en/stable/tutorials/model.html}. Accessed on: June 15, 2024},
+}
+
+% de Lima, Luiza Felippi, et al. "Role of extrinsic factors on magnetoelastic resonance biosensors sensitivity." Measurement Science and Technology 35.4 (2024): 045113.
+@article{luiza:2024,
+  title={Role of extrinsic factors on magnetoelastic resonance biosensors sensitivity},
+  author={de Lima, Luiza Felippi and Dutra, Roberta and Gonz{\'a}lez, Diego and Sommer, Rubem Luis and Perottoni, Cl{\'a}udio Ant{\^o}nio and Aguzzoli, Cesar and Roesch-Ely, Mariana},
+  journal={Measurement Science and Technology},
+  volume={35},
+  number={4},
+  pages={045113},
+  year={2024},
+  publisher={IOP Publishing}
 }
